--- a/Minesweeper Game-Logic/pom.xml
+++ b/Minesweeper Game-Logic/pom.xml
@@ -3,6 +3,10 @@
   <groupId>org.pixelgaffer.turnierserver.minesweeper</groupId>
   <artifactId>gamelogic</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -11,6 +15,22 @@
         <configuration>
           <source/>
           <target/>
+        </configuration>
+      </plugin>
+	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addClasspath>false</addClasspath>
+            </manifest>
+            <manifestEntries>
+              <Logic-Class>org.pixelgaffer.turnierserver.minesweeper.logic.MinesweeperLogic</Logic-Class>
+            </manifestEntries>
+          </archive>
         </configuration>
       </plugin>
     </plugins>
