--- a/Minesweeper Java Ai Library/pom.xml
+++ b/Minesweeper Java Ai Library/pom.xml
@@ -27,4 +27,8 @@
   		<version>1.0-SNAPSHOT</version>
   	</dependency>
   </dependencies>
+  <properties>
+  	<maven.compiler.target>1.8</maven.compiler.target>
+  	<maven.compiler.source>1.8</maven.compiler.source>
+  </properties>
 </project>
